# DiffEvals

./: .gitignore  README.md  blah.py  example_usage.py  main.py  pyproject.toml  setup.py
src/genmetrics/: __init__.py  evaluations.py  feature_extractors.py  utils.py
