[project]
name = "diffevals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hpsv2",
    "huggingface-hub>=0.34.2",
    "image-reward",
    "numpy>=2.3.2",
    "open-clip-torch>=2.32.0",
    "prdc>=0.2",
    "scipy>=1.16.1",
    "timm==1.0.13",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchmetrics[image]>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.0",
]

[tool.uv.sources]
hpsv2 = { git = "https://github.com/tgxs002/HPSv2.git" }
image-reward = { git = "https://github.com/zai-org/ImageReward.git" }
